[tool.poetry]
name = "alpha-trader-python"
version = "0.1.0"
description = "Python SDK for https://alpha-trader.com"
authors = ["maltemelzer"]
license = "MIT"
readme = "README.md"
packages = [{include = "alpha_trader"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29.0"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.8"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
mkdocs-awesome-pages-plugin = "^2.9.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
